# kaizen

./: .coderabbit.yaml  .gitignore  AGENTS.md  GEMINI.md  README.md  cliff.toml  renovate.json
.github/workflows/: cd-parser.yaml  cd-website.yaml  ci-parser.yaml  ci-website.yaml  codeql.yaml  deploy-website.yaml  docker-website.yaml  kaizen.yaml  security-scorecard.yaml
algorithms/analysis/: 0001-intro-to-knuths-method-4e48e34.md  0002-sum-multiples-of-3-or-5-7ded72a.md  0002-sum-multiples-of-3-or-5-7ded72ad.md  0003-two-sum-e4765a6.md  0004-find-the-sum-of-integer-combinations-c940900.md  0004-find-the-sum-of-integer-combinations-c9409009.md  0005-add-two-numbers-b988ccf.md  0005-add-two-numbers-b988ccf9.md  0006-palindrome-number-bd8281b.md  0007-regular-expression-matching-v1-e25695d.md  0008-valid-parentheses-6c1646f.md  0009-longest-common-prefix-v1-ebda9ed.md  0009-longest-common-prefix-v1-ebda9ed4.md  0010-even-fibonacci-numbers-0ae136e.md  0010-even-fibonacci-numbers-0ae136e0.md  0011-largest-prime-factor-d7f3c75.md  0011-largest-prime-factor-d7f3c752.md  0012-largest-palindrome-product-40e1dc9.md  0012-largest-palindrome-product-40e1dc99.md  0013-divide-two-integers-614cccf.md  0014-longest-substring-with-unique-characters-f1361bc.md  0015-count-sheep-53c3415.md  0016-smallest-multiple-3f3c1cf.md  0017-swap-nodes-in-pairs-2f3ce8c.md  0018-roman-to-integer-b7eeb78.md  0019-longest-palindromic-substring-8566cb2.md  0020-ransom-note-4a903cd.md  0021-string-to-integer-298c9fd.md  0022-longest-palindrome-0828b3b.md  0023-find-the-odd-integer-5d02db5.md  0024-container-with-most-water-a546912.md  0025-three-sum-17e6901.md  0026-merge-two-sorted-lists-c378349.md  0027-range-extraction-7bc9160.md  0028-add-binary-c84a12c.md  0029-climbing-stairs-d0c2f0a.md  0030-linked-list-cycle-c1482f0.md  0031-valid-palindrome-6a8734f.md  (+26 more)
algorithms/codewars/: Cargo.toml
algorithms/codewars/rust/: Cargo.toml
algorithms/codewars/rust/src/algorithms/easy/: count_sheep.rs  mod.rs
algorithms/codewars/rust/src/algorithms/hard/: mod.rs  range_extraction.rs
algorithms/codewars/rust/src/algorithms/medium/: find_odd_int.rs  mod.rs
algorithms/codewars/src/algorithms/: find_int_combinations.rs  mod.rs
kaizen-parser/: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  rust-toolchain.toml  sonar-project.properties
kaizen-parser/src/: adapters.rs  domain.rs  lib.rs  main.rs
kaizen-parser/src/adapters/: git_provider.rs  json_writer.rs  mod.rs
kaizen-parser/src/adapters/git/: commits.rs  repository.rs
kaizen-parser/src/adapters/output/: json.rs
kaizen-parser/src/domain/: commit.rs  kaizen.rs  mod.rs  parser.rs  ports.rs  stats.rs
kaizen-parser/src/domain/git/: entities.rs  ports.rs
kaizen-parser/src/domain/kaizen/: entities.rs  mod.rs  ports.rs
kaizen-parser/src/domain/kaizen/functions/: analysis.rs  mod.rs  parser.rs  stats.rs
kaizen-parser/tests/: test_cli.rs  test_git_commit_provider.rs  test_git_repository_provider.rs  test_json_file_output_writer.rs
website/: .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  eslint.config.mjs  image-loader.ts  jest.config.js  jest.setup.ts  justfile  next.config.mjs  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  sonar-project.properties  tsconfig.json
(+169 files in other folders)
