[package]
name = "kaizen"
version = "0.3.0"
description = "Parser for Kaizen journal commits"
authors = ["Josimar Silva <me@josimar-silva.com>"]
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
readme = "./README.md"
homepage = "https://github.com/josimar-silva/kaizen/kaizen-parser"
repository = "https://github.com/josimar-silva/kaizen/kaizen-parser"
keywords = ["kaizen", "algorithms", "git"]

[[bin]]
name = "parser"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.20.2"
regex = "1.10.5"
rayon = "1.11.0"
clap = { version = "4.4", features = ["derive"] }
tempfile = "3.8"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10.73", features = ["vendored"] }

[dev-dependencies]
kaizen = { path = ".", version = "0.3.0" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
