[package]
name = "kaizen"
version = "0.4.2-SNAPSHOT"
description = "Parser for Kaizen journal commits"
authors = ["Josimar Silva <me@josimar-silva.com>"]
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
readme = "./README.md"
homepage = "https://github.com/josimar-silva/kaizen/kaizen-parser"
repository = "https://github.com/josimar-silva/kaizen/kaizen-parser"
keywords = ["kaizen", "algorithms", "git"]

[[bin]]
name = "parser"
path = "src/main.rs"

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
git2 = "=0.20.4"
regex = "=1.12.4"
rayon = "=1.11.0"
clap = { version = "=4.6.1", features = ["derive"] }
tempfile = "=3.26.0"
url = "=2.5.8"
chrono = { version = "=0.4.44", features = ["serde"] }
log = "=0.4.33"
env_logger = "=0.11.10"
ordermap = { version = "=1.2.0", features = ["serde"] }
[target.'cfg(not(windows))'.dependencies]
openssl = { version = "=0.10.81", features = ["vendored"] }

[dev-dependencies]
kaizen = { path = ".", version = "0.4.2-SNAPSHOT" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
